# pdf-noter

./: .env  .gitignore  .gitmessage.txt  Dockerfile  README.md  Readme.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  README.md  pdfnoter.db  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: documents.py  highlights.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: document.py  highlight.py
backend/app/schemas/: highlight.py
backend/app/services/: llm_service.py
frontend/: .env  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
frontend/src/api/: client.js
frontend/src/components/chat/: Chat.jsx
frontend/src/components/common/: Modal.css  Modal.jsx
frontend/src/components/pdf/: BookmarkSidebar.jsx  PdfHighlighterViewer.css  PdfHighlighterViewer.jsx  PdfLibrary.jsx  Sidebar.jsx  StatusBar.jsx
frontend_current/src/: App.css
frontend_current/src/components/chat/: Chat.css
frontend_current/src/components/pdf/: BookmarkSidebar.jsx  PdfEmbedder.jsx  PdfHighlighterViewer.jsx  PdfLibrary.css  StatusBar.jsx
frontend_current/src/hooks/: useLocalStorage.js
frontend_current/src/services/: VectorService.js
public/pdfs/: index.json
src/: App.js  AppContext.jsx  index.js
src/components/pdf/: BookmarkSidebar.jsx  PdfHighlighterViewer.css  PdfHighlighterViewer.jsx  StatusBar.jsx
src/services/: OllamaService.js
