[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pdf-noter-backend"
version = "0.1.0"
description = "Backend API for pdf-noter"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MONA" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "sqlalchemy>=2.0.25",
  "alembic>=1.13.1",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.0.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "tiktoken>=0.6.0",
]

[project.optional-dependencies]
# Install with: pip install ".[postgres]"
postgres = [
  "psycopg[binary]>=3.1.18",
  "pgvector>=0.2.5",
]

# Install with: pip install ".[auth]"
auth = [
  "python-jose>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
]

# Install with: pip install ".[dev]"
dev = [
  "ruff>=0.4.0",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "types-python-jose>=3.3.4.20240106",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true